# aristoptimiser

./: .dockerignore  .travis.yml  Dockerfile  Dockerfile2  Dockerfile3  Dockerfile_simple  Dockerfile_test  Pipfile  README.md  appveyor.yml  heroku.yml  requirements.txt  setup.cfg  setup.py  sonar-project.properties  sonar-projet.properties  wsgi.py
.circleci/: config.yml  config_with_docker_building.yml
.travis/: deploy_dockerhub.sh  deploy_heroku.sh
aristoptimiser/: OptimiserConfigurator.py  aristo_memory.py  dummy_app4.py  starter.py  utilities.py  web_optimiser_configuration.py  wsgi.py
docs/: index.md
resources/: small_bad_configuration.json  small_good_configuration.json
test/: conftest.py  test_configuration_of_optimiser.py  test_the_deployment_of_containers.py  test_web_optimiser_configurator.py
test-results/unit2/: results.xml
test-results/xunit2/: results.xml
