[metadata]
name = aristoptimiser
author = Christos Tsotskas
author-email = c.tsotskas@gmail.com
summary = Multi-Objective Optimiser for real-world problems
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
home-page = https://launchpad.net/pbr
project_urls =
    Bug Tracker = https://github.com/users/christos-tsotskas/projects/1
    Documentation = https://aristoptimiser.readthedocs.io/en/latest/
    Source Code = https://github.com/christos-tsotskas/aristoptimiser
license = Apache-2
classifier =
    Development Status :: 1 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python


[files]
packages =
    web_optimiser_configuration